--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'This was your first issue! Thank you for contributing!'' first issue'
-        pr-message: 'This was your first Pull Request! Thank you for contributing!'' first pr'
+        issue-message: 'This was your first issue! Thank you for contributing!'
+        pr-message: 'This was your first Pull Request! Thank you for contributing!'
