--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,9 +1,5 @@
 # These are supported funding model platforms
 
 patreon: bryanjenks
-
-custom:
-  [
-    "https://www.buymeacoffee.com/tallguyjenks",
-    "https://www.paypal.me/tallguyjenks",
-  ]
+github: tallguyjenks
+custom: ["https://www.buymeacoffee.com/tallguyjenks", "https://www.paypal.me/tallguyjenks"]
